fix #17 image alignment in flex bloc

--- a/content/themes/cardinal/src/scss/_globals.scss
+++ b/content/themes/cardinal/src/scss/_globals.scss
@@ -42,7 +42,7 @@
 
 .page-template-tpl-contact {
 
-    .content {
+    .singular__content {
         line-height: (24 / $body-fs);
         text-align: center;
 
